[JENKINS-70240] Backport to 2.375.x